#Solved - Bug no anchor cores trocadas #Solved - Bug Contact Icons Different (not aligned when screen is small)

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -142,6 +142,11 @@ body{
     padding: 0;
 }
 
+.user-options a{
+    color:white;
+    text-decoration: none;
+}
+
 .user-options li{
     list-style-type: none;
     padding: 10px;
