--- a/public/css/contacts.css
+++ b/public/css/contacts.css
@@ -10,13 +10,8 @@
     justify-content: center;
     margin: auto;
     padding: 0;
-    margin-left: auto;
-    margin-right: auto;
 }
 
-.contacts div{
-    margin: auto;
-}
 
 .contacts-container h3{
     width: 100%;
@@ -36,9 +31,12 @@
     width: 200px;
 }
 
+.contacts .contact_msg{
+    margin-left: 10px;
+}
+
 .contact_msg p{
     margin: 0;
-    margin-left: 10px;
 }
 
 .contact_msg :nth-child(1){
@@ -62,4 +60,17 @@
     padding-right: 10px;
     font-size: 25px;
     color:white;
+}
+
+@media screen and (max-width: 399px){
+    .contacts .contact_msg{
+        margin-left: 20px;
+    }
+    .contacts .min-size{
+        margin-left: 37px;
+    }
+
+    .contacts .min-size-2{
+        margin-left: 29px;
+    }
 }
